# backy

./: Cargo.toml  backy.nix  flake.nix
src/: archive.rs  crypto.rs  group.rs  header.rs  index.rs  lib.rs  main.rs  pack.rs  progress.rs  unpack.rs
src/archive/: sub_archive.rs
src/index/: entry_path.rs
src/pack/: hashing_reader.rs  header.rs
