[package]
name = "backy"
description = "Command-line file backup tool"
authors = ["David Wolff"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
humansize = "2.1"
indicatif = "0.17.8"
parse-size = { version = "1.0", features = ["std"] }
rayon = "1.10"
tar = "0.4"
walkdir = "2.5"
xz2 = "0.1"
