[package]
name = "backy"
description = "Command-line file backup tool"
authors = ["David Wolff"]
version = "0.2.0-wip"
edition = "2024"

[dependencies]
base64 = "0.22"
blake3 = "1.8"
chacha20 = { version = "0.9", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
either = "1.13"
getrandom = "0.3"
humansize = "2.1"
indicatif = "0.17"
parse-size = { version = "1.0", features = ["std"] }
rayon = "1.10"
rpassword = "7.3"
walkdir = "2.5"
